[package]
name = "h_analyzer_client_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
polars = { version = "0.40.0", features = ["csv", "lazy", "serde"] }
anyhow = "1.0.75"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.10.2" }
prost = "0.12.1"

serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
async-stream = { version = "0.3" }
tokio-stream = { version = "0.1" }

h_analyzer_data = { git = "https://github.com/HarukiUchito/h_analyzer_data.git" }
